--- a/AdventureWorks.DAL/Web.config
+++ b/AdventureWorks.DAL/Web.config
@@ -18,7 +18,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  
-
-
-<connectionStrings><add name="AdventureWorks2012Entities" connectionString="metadata=res://*/Entity.AdventureWorksContext.csdl|res://*/Entity.AdventureWorksContext.ssdl|res://*/Entity.AdventureWorksContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AdventureWorks2012;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="AdventureWorks2012Entities" connectionString="metadata=res://*/Entity.AdventureWorksContext.csdl|res://*/Entity.AdventureWorksContext.ssdl|res://*/Entity.AdventureWorksContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AdventureWorks2012;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AdventureWorks2012Entities1" connectionString="metadata=res://*/Entity.Model1.csdl|res://*/Entity.Model1.ssdl|res://*/Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AdventureWorks2012;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SalesContext" connectionString="metadata=res://*/Entity.SalesContext.csdl|res://*/Entity.SalesContext.ssdl|res://*/Entity.SalesContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AdventureWorks2012;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
